# deepagents-viz

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  examples.md  pyproject.toml
.github/workflows/: ci.yml
docs/: dot-renderer-notes.md
docs/superpowers/plans/: 2026-07-14-deepagents-viz.md
docs/superpowers/specs/: 2026-07-14-deepagents-viz-design.md
src/deepagents_viz/: __init__.py  cli.py  entrypoint.py  extract.py  intercept.py  model.py
src/deepagents_viz/render/: __init__.py  mermaid.py
tests/: test_cli.py  test_entrypoint.py  test_extract.py  test_intercept.py  test_mermaid.py  test_model.py
tests/fixtures/factory/: agent.py  langgraph.json
tests/fixtures/simple/: agent.py  langgraph.json
