[project]
name = "deepagents-viz"
version = "0.1.0"
description = "Visualize LangChain DeepAgents architecture as a Mermaid diagram."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deepagents-viz = "deepagents_viz.cli:main"

[dependency-groups]
dev = ["pytest>=8", "deepagents>=0.5.9", "langchain-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagents_viz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
