[project]
name = "deepagents-viz"
version = "0.1.0"
description = "Visualize LangChain DeepAgents architecture as a Mermaid diagram."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
deepagents-viz = "deepagents_viz.cli:main"

[dependency-groups]
# Keep the ruff floor's minor in sync with the ruff-pre-commit `rev` in
# .pre-commit-config.yaml so local hooks and CI resolve matching output.
dev = ["pytest>=8", "deepagents>=0.5.9", "langchain-core", "ruff>=0.15.21,<0.16", "pre-commit>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagents_viz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade,
# B: flake8-bugbear, C4: flake8-comprehensions, SIM: flake8-simplify
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
